:sparkles: feat: adicionado header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,41 @@
 <body>
 
     <header>
+        <div class="section-top">
+            <div class="section-options">
+                <p>Ir para o conteúdo <span class="select-number">1</span></p>
+                <p>Ir para o menu <span class="select-number">2</span></p>
+                <p>Ir para a busca <span class="select-number">3</span></p>
+                <p>Ir para o rodapé <span class="select-number">4</span></p>
+            </div>
 
+            <div class="section-options section-options-right">
+                <p>Mapa do site</p>
+                <p>Alto contraste</p>
+                <p>Acessibilidade</p>
+            </div>
+        </div>
+        <div class="section-menu">
+            <div class="section-menu-logo">
+                <img src="./images/logo-white.png" alt="Logo UNASUS" />
+            </div>
+            <div class="section-menu-nav">
+                <div class="search-container">
+                    <input class="menu-search-input" type="text" placeholder="Pesquisar" />
+                    <span class="search-icon">🔍</span>
+                </div>
+                <nav class="menu-nav">
+                    <a href="#">Início</a>
+                    <a href="#">Cursos</a>
+                    <a href="#">Programas de formação</a>
+                    <a href="#">Tutoriais</a>
+                </nav>
+                <div class="menu-search-button">
+                    <button>Acessar Ambiente</button>
+                </div>
+
+            </div>
+        </div>
     </header>
 
     <main></main>
