:sparkles: feat: adicionado seção de programas de formação

--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
                     </div>
                 </div>
                 <div class="container-curso">
-                    <!-- <div id="curso-img"></div> -->
                     <img src="./images/curso3.png" alt="curso3" />
                     <p>Curso</p>
                     <h2>Formação para Gerentes de Serviços de Especialidades em Saúde Bucal</h2>
@@ -119,24 +118,51 @@
                 <button class="content-button-all">Ver todos os cursos abertos</button>
             </div>
         </section>
-        <section class="container-section">
+        <section class="container-section" id="section-formacoes">
             <h1>Programas de formação</h1>
-            <div>
-                <div>
-                    <div></div>
-                    <h2>Programa 1</h2>
-                    <p>Descrição do programa 1</p>
-                    <div>
-                        <div>
-                            <span>6 módulos</span>
-                            <span>48 recursos</span>
-                            <span>240 horas</span>
+            <div class="content-formacoes">
+                <div class="container-formacao">
+                    <div id="formacao-data">
+                        <div id="formacao-img">
+                            <img src="./images/formacao1.png" alt="formacao1" />
                         </div>
-                        <button>Saiba mais</button>
+                        <div id="formacao-name">
+                            <h2>PROGRAMA DE FORMAÇÃO</h2>
+                            <p>Programa de capacitação em atenção à pessoa com deficiência III</p>
+                            <div id="formacao-infos">
+                                <div id="formacao-descricao">
+                                    <span>6 módulos</span>
+                                    <span>48 recursos</span>
+                                    <span>240 horas</span>
+                                </div>
+                                <button>Saiba mais</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-formacao">
+                    <div id="formacao-data">
+                        <div id="formacao-img">
+                            <img src="./images/formacao2.png" alt="formacao2" />
+                        </div>
+                        <div id="formacao-name">
+                            <h2>PROGRAMA DE FORMAÇÃO</h2>
+                            <p>Formação básica em saúde digital</p>
+                            <div id="formacao-infos">
+                                <div id="formacao-descricao">
+                                    <span>6 módulos</span>
+                                    <span>48 recursos</span>
+                                    <span>240 horas</span>
+                                </div>
+                                <button>Saiba mais</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <button>Ver todos os programas abertos</button>
+            <div class="container-button-all">
+                <button class="content-button-all">Ver todos os programas abertos</button>
+            </div>
         </section>
         <section class="container-section">
             <div>
