:sparkles: feat: adicionado seção do rodapé

--- a/index.html
+++ b/index.html
@@ -164,25 +164,22 @@
                 <button class="content-button-all">Ver todos os programas abertos</button>
             </div>
         </section>
-        <section class="container-section">
-            <div>
-                <div>
+        <section class="container-section" id="section-fundamentos">
+            <div class="container-fundamentos">
+                <div class="content-fundamento">
                     <img src="./images/icon1.png" alt="inovacao" width="50px" />
                     <h1>Inovação</h1>
-                    <p>Construa conexões por meio de um ambiente inovador, acessível em Libras e disponível em todas as
-                        plataformas digitais.</p>
+                    <p>Construa conexões por meio de um ambiente inovador, acessível em Libras e disponível em todas as plataformas digitais.</p>
                 </div>
-                <div>
-                    <img src="./images/icon2.png" alt="inovacao" width="50px" />
+                <div class="content-fundamento">
+                    <img src="./images/icon2.png" alt="autonomia" width="50px" />
                     <h1>Autonomia</h1>
-                    <p>Escolha onde e quando estudar. Com o SAITE AVA você tem autonomia
-                        para buscar conhecimento.</p>
+                    <p>Escolha onde e quando estudar. Com o SAITE AVA você tem autonomia para buscar conhecimento.</p>
                 </div>
-                <div>
-                    <img src="./images/icon3.png" alt="inovacao" width="50px" />
+                <div class="content-fundamento">
+                    <img src="./images/icon3.png" alt="interatividade" width="50px" />
                     <h1>Interatividade</h1>
-                    <p>Aprenda por meio de diversos recursos, que vão além dos e-books interativos. Tenha acesso a
-                        vídeos, infográficos, games, audiobooks, podcasts e muito mais!</p>
+                    <p>Aprenda por meio de diversos recursos, que vão além dos e-books interativos. Tenha acesso a vídeos, infográficos, games, audiobooks, podcasts e muito mais!</p>
                 </div>
             </div>
         </section>
@@ -191,13 +188,13 @@
     <footer>
         <section class="container-footer" id="section-rodape">
             <div>
-                <img src="./images/UNASUS.png" alt="Logo UNASUS" width="150px" />
-                <img src="./images/logo_vertical.png" alt="Logo UnaSus" width="150px" />
-                <img src="./images/logoufma.jpg" alt="Logo UFMA" width="150px" />
-                <img src="./images/saite.svg" alt="Logo SAITE" width="150px" />
+                <img src="./images/UNASUS.png" alt="Logo UNASUS" />
+                <img src="./images/logo_vertical.png" alt="Logo UnaSus"  />
+                <img src="./images/logoufma.png" alt="Logo UFMA"  />
+                <img src="./images/saite.svg" alt="Logo SAITE"  />
             </div>
             <div>
-                <img src="./images/logo-white.png" alt="logo saiteava" width="150px" />
+                <img src="./images/logo-white.png" alt="logo saiteava"  />
                 <h2>Orgulhosamente desenvolvido pelo Grupo SAITE</h2>
                 <p>Termos de Uso</p>
                 <p>Política de Privacidade</p>
