:sparkles: feat: atualizando estilos

--- a/index.html
+++ b/index.html
@@ -66,20 +66,17 @@
                     estruturação da Política Nacional de Saúde Bucal.</p>
                 <button>Saiba mais</button>
             </div>
-            <!-- <div id="content-images-conteudo">
-                </div> -->
         </section>
         <section class="container-section" id="section-cursos">
             <h1>Cursos</h1>
             <div class="content-cursos">
                 <div class="container-curso">
-                    <!-- <div id="curso-img"></div> -->
                     <img src="./images/curso1.png" alt="curso1" />
                     <p>Curso</p>
                     <h2>Formação para Gerentes de Serviços de Especialidades em Saúde Bucal</h2>
                     <div id="curso-infos">
                         <div id="curso-descricao">
-                            <span>6 módulos</span>
+                            <span>módulos</span>
                             <span>48 recursos</span>
                             <span>240 horas</span>
                         </div>
@@ -87,7 +84,6 @@
                     </div>
                 </div>
                 <div class="container-curso">
-                    <!-- <div id="curso-img"></div> -->
                     <img src="./images/curso2.png" alt="curso2" />
                     <p>Curso</p>
                     <h2>Formação para Gerentes de Serviços de Especialidades em Saúde Bucal</h2>
@@ -169,7 +165,8 @@
                 <div class="content-fundamento">
                     <img src="./images/icon1.png" alt="inovacao" width="50px" />
                     <h1>Inovação</h1>
-                    <p>Construa conexões por meio de um ambiente inovador, acessível em Libras e disponível em todas as plataformas digitais.</p>
+                    <p>Construa conexões por meio de um ambiente inovador, acessível em Libras e disponível em todas as
+                        plataformas digitais.</p>
                 </div>
                 <div class="content-fundamento">
                     <img src="./images/icon2.png" alt="autonomia" width="50px" />
@@ -179,7 +176,8 @@
                 <div class="content-fundamento">
                     <img src="./images/icon3.png" alt="interatividade" width="50px" />
                     <h1>Interatividade</h1>
-                    <p>Aprenda por meio de diversos recursos, que vão além dos e-books interativos. Tenha acesso a vídeos, infográficos, games, audiobooks, podcasts e muito mais!</p>
+                    <p>Aprenda por meio de diversos recursos, que vão além dos e-books interativos. Tenha acesso a
+                        vídeos, infográficos, games, audiobooks, podcasts e muito mais!</p>
                 </div>
             </div>
         </section>
@@ -189,12 +187,12 @@
         <section class="container-footer" id="section-rodape">
             <div>
                 <img src="./images/UNASUS.png" alt="Logo UNASUS" />
-                <img src="./images/logo_vertical.png" alt="Logo UnaSus"  />
-                <img src="./images/logoufma.png" alt="Logo UFMA"  />
-                <img src="./images/saite.svg" alt="Logo SAITE"  />
+                <img src="./images/logo_vertical.png" alt="Logo UnaSus" />
+                <img src="./images/logoufma.png" alt="Logo UFMA" />
+                <img src="./images/saite.svg" alt="Logo SAITE" />
             </div>
             <div>
-                <img src="./images/logo-white.png" alt="logo saiteava"  />
+                <img src="./images/logo-white.png" alt="logo saiteava" />
                 <h2>Orgulhosamente desenvolvido pelo Grupo SAITE</h2>
                 <p>Termos de Uso</p>
                 <p>Política de Privacidade</p>
